--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This file lists all contributed to the repository.
+# This file list  contributed to the repository.
 
-Olalekan Onifade <locustbea@gmail.com>
+Olalekan Onifade <locustbea@yahoo.com>
